map enpoints in consts. Also don't zoom on click in map, to prevent jumpy behaviour

--- a/app/components/Map/style.scss
+++ b/app/components/Map/style.scss
@@ -1,7 +1,4 @@
 .map-component {
-  .map {
-  }
-
   #mapdiv {
     position: relative;
     width: 100%;
